--- a/changed/templates/changed/profile.html
+++ b/changed/templates/changed/profile.html
@@ -2,16 +2,18 @@
 
 {% block content %}
 <!--Content goes here-->
+
 <head>
     <title>{{user.username}}</title>
 </head>
+
 <body>
     {% for review in user_reviews %}
     <ul>
         <li>
             <p>{{review.business.business_name}}</p>
-            <p>{{review.covid_compliance_rating}}</p>
-            <p>{{review.body}}</p>
+            <p>COVID Compliance Rating: {{review.covid_compliance_rating}}/5</p>
+            <p>Review: {{review.body}}</p>
         </li>
     </ul>
 
