--- a/changed/templates/changed/base_html.html
+++ b/changed/templates/changed/base_html.html
@@ -18,6 +18,9 @@
                 <li class="nav-item active">
                     <a class="nav-link" href="{% url 'changed:index' %}">Home<span class="sr-only">(current)</span></a>
                 </li>
+                <li class="nav-item active">
+                    <a class="nav-link" href="{% url 'changed:about' %}">About<span class="sr-only">(current)</span></a>
+                </li>
                 {% if user.is_authenticated %}
                 <li class="nav-item active">
                     <a class="nav-link" href="{% url 'changed:logout' %}">
