--- a/changed/templates/changed/profile.html
+++ b/changed/templates/changed/profile.html
@@ -7,17 +7,24 @@
     <title>{{user.username}}</title>
 </head>
 
-<body>
-    {% for review in user_reviews %}
-    <ul>
-        <li>
-            <p>{{review.business.business_name}}</p>
-            <p>COVID Compliance Rating: {{review.covid_compliance_rating}}/5</p>
-            <p>Review: {{review.body}}</p>
-        </li>
-    </ul>
 
-    {% endfor %}
+<body class="d-flex flex-column min-vh-100">
+    <div class="wrapper flex-grow-1">
+        <div class="container">
+            <div class="text-center" style="margin:2vh">
+                <h3>{{user.username}}'s Reviews</h3>
+            </div>
+            {% for review in user_reviews %}
+            <div class="card mx-auto row justify-content-md-center" style="margin:1vh; width: 50vw">
+                <h5 class="card-header">{{review.business.business_name}}</h5> <!-- TODO: have date of review show up-->
+                <div class="card-body">
+                    <p>COVID Compliance Rating: {{review.covid_compliance_rating}}/5</p>
+                    <p>Review: {{review.body}}</p>
+                </div>
+            </div>
 
+            {% endfor %}
+        </div>
+    </div>
 </body>
 {% endblock %}
