--- a/changed/templates/changed/replies.html
+++ b/changed/templates/changed/replies.html
@@ -1,17 +1,13 @@
-{% extends 'changed/base_html.html' %}
+﻿{% extends 'changed/base_html.html' %}
 
 {% block content %}
-<!--Content goes here-->
 
-<body>
 
-    <h2 class="text-center">{{business_name}}</h2>
-    <h5 class="text-center">COVID Guideline Reviews</h5>
-    {% for comment in business_info %}
-    <div class="container">
-        <div class="row justify-content-md-center">
-            <div class="list-group" style="width:70vw">
-                <a href="{% url 'changed:replies' id=comment.id %}" class="list-group-item list-group-item-action" aria-current="false">
+    <body>
+
+        <div class="container">
+            <div class="row justify-content-md-center">
+                <div class="list-group" style="width:70vw">
                     <div class="d-flex w-100 justify-content-between">
                         <h5 class="mb-1" style="color:black">
                             <u> Covid Compliance Rating:</u>
@@ -50,10 +46,41 @@
                     <p class="mb-1">capacity limit: {{comment.capacity_limit}}</p>
                     <hr>
                     <p class="mb-1" style="color:black">{{comment.body}}</p>
-                </a>
-
+                </div>
             </div>
-            {% endfor %}
         </div>
-</body>
+        {% for r in replies %}
+        <div class="container">
+            <div class="row justify-content-md-center">
+                <div class="list-group" style="width:70vw">
+                    <div class="d-flex w-100 justify-content-between">
+                        <h5 class="mb-1" style="color:black">
+                            <small>{{r.user.username}}</small>
+                        </h5>
+                    </div>
+                    <hr>
+                    <p class="mb-1" style="color:black">{{r.body}}</p>
+                </div>
+            </div>
+         </div>
+        {% endfor %}
+    </body>
+        <form action="{% url 'changed:replies' id=comment.id %}" ,
+              method="post">
+            {% csrf_token %}
+            <div class="form-control">
+                <div class="fieldWrapper">
+                    {{ form.reply.errors }}
+                    {{ form.reply.label_tag }}
+                    {{ form.reply }}
+                </div>
+                <br />
+                <button type="submit" , value="submit" ,
+                        class="btn btn-secondary">
+                    Submit
+                </button>
+            </div>
+        </form>
+    </body>
 {% endblock %}
+
